UPDATE _curl_page.css: Remove width 100 from image containers (FIX)
- GOTCHA: Results image containers were too wide for
  the defined 3-column grid columns.
- SOLVED: Remove "width: 100%" prop from .res-img-cont

--- a/style/_curl_page.css
+++ b/style/_curl_page.css
@@ -34,7 +34,6 @@ File Purpose:
   margin: 7px 0 0 7px;
   list-style: none;
   max-width: 500px;
-  width: 100%;
   border: solid #7c7373 1px;
   background: white;
 }
